started fixing alignment issues

--- a/inkling/src/App.css
+++ b/inkling/src/App.css
@@ -42,9 +42,10 @@ h1 {
 }
 
 h2 {
-  font-size: 100px;
+  font-size: 400% !important;
+  /* background-color: aqua; */
 }
 
 .row {
-  margin: 0;
+  margin: 0 !important;
 }
